[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-triage"
version = "1.0.0"
description = "A real-world OpenEnv environment where an agent acts as Customer Support, triaging tickets and issuing refunds."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pytest",
    "fastapi",
    "uvicorn",
    "openai",
    "requests"
]

[tool.setuptools]
packages = ["src"]
